--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
+    "flowbite": "^1.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-scripts": "^5.0.1",
+    "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,5 +49,9 @@
     "postcss": "^8.4.20",
     "react-router-dom": "^6.4.5",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/abd-ellatif/IGL-TP.git",
+  "author": "NesrineMoukebel <kn_moukebel@esi.dz>",
+  "license": "MIT"
 }
