--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
     "flowbite": "^1.5.5",
+    "gapi-script": "^1.2.0",
+    "history": "^5.3.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.7.1",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-scripts": "^5.0.1",
